# quick_launcher

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.tsx  search.ts  styles.css  tauri.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
