[package]
name = "quick-launcher"
version = "1.0.0"
description = "A tidy Windows desktop launcher."
authors = ["Codex"]
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "quick-launcher"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
rfd = "0.15"
image = { version = "0.25", default-features = false, features = ["png"] }
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
] }
