[package]
name = "quick-launcher"
version = "1.0.8"
description = "A tidy Windows desktop launcher."
authors = ["Codex"]
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "quick-launcher"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
rfd = "0.15"
winreg = "0.55"
